# op_rollout_modifier

./: .gitignore  CMakeLists.txt  README.md  package.xml
export/: .~lock.write_2022-05-06-22:43:34.csv#  .~lock.write_2022-05-17-234421.csv#  write_2022-05-09-205133.csv  write_2022-05-09-210822.csv  write_2022-05-09-211101.csv  write_2022-05-09-211424.csv  write_2022-05-09-211620.csv  write_2022-05-09-212342.csv  write_2022-05-09-212703.csv
include/: op_rollout_modifier.hpp
scenario_xosc/: LaneChangeSimple.xosc
src/: op_rollout_modifier.cpp  trajectory_recorder.py
