<?xml version="1.0"?>
<package format="2">
  <name>op_rollout_modifier</name>
  <version>0.0.0</version>
  <description>The op_rollout_modifier package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="kemjensak@gmail.com">Jinseok Kim</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <depend>autoware_can_msgs</depend>
  <depend>autoware_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>map_file</depend>
  <depend>op_planner</depend>
  <depend>op_ros_helpers</depend>
  <depend>op_simu</depend>
  <depend>op_utility</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>libwaypoint_follower</depend>
  <depend>lanelet2_extension</depend>
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
